Revert "Fix alignment in Today"
This reverts commit 3917e8c5085739233b68924e4d3a942605279d92.

--- a/src/styles/_today.css
+++ b/src/styles/_today.css
@@ -8,9 +8,6 @@
     color: var(--s-color-on-background);
     padding: 0;
   }
-  hgroup {
-    padding: 0 var(--p-space-xs-m);
-  }
 }
 
 #today-heading {
